# pax-rs

./: .gitignore  .paxmeta-example  Cargo.toml  Makefile  README.md  USAGE.md  endpints.txt  endpoints.txt  flake.nix  oreon11.yaml
.cargo/: config.toml
commands/: Cargo.toml
commands/src/: lib.rs
conf_examples/: repository_selection_test.conf  sources.conf
flags/: Cargo.toml
flags/src/: lib.rs
metadata/: Cargo.toml  IMPORTANT.md
metadata/src/: cloudflare_r2.rs  conflict_resolution.rs  deb_repository.rs  file_tracking.rs  lib.rs  package_holds.rs  package_verification.rs  performance.rs  repo_index.rs  repository_auth.rs  rollback.rs  rpm_parser.rs  service_management.rs  yum_repository.rs
metadata/src/depend_kind/: mod.rs
metadata/src/extensions/cli/: mod.rs
metadata/src/installed/: mod.rs
metadata/src/parsers/: mod.rs
metadata/src/parsers/apt/: mod.rs
metadata/src/parsers/github/: mod.rs
metadata/src/parsers/pax/: mod.rs
metadata/src/parsers/rpm/: mod.rs
metadata/src/processed/: mod.rs
metadata/src/versioning/: mod.rs
pax-builder/: Cargo.toml
pax-builder/src/: lib.rs  main.rs
sample-recipes/: zlib.yaml
sbin/: apparmor_parser
settings/: Cargo.toml
settings/src/: lib.rs
src/: README.md  command.rs  flag.rs  lib.rs  main.rs  statebox.rs
src/adapters/: deb.rs  mod.rs  pax.rs  rpm.rs
src/clean/: mod.rs
src/compile/: mod.rs
src/configure/: mod.rs
src/crypto/: mod.rs
src/database/: mod.rs
src/distro_compat/: mod.rs
src/download/: mod.rs
src/emancipate/: mod.rs
src/endpoints_init/: mod.rs
src/info/: mod.rs
src/init/: mod.rs
src/install/: mod.rs
src/isocreate/: mod.rs
src/list/: mod.rs
src/lock/: mod.rs
src/logging/: mod.rs
src/pax_init/: mod.rs
src/progress/: mod.rs
src/provides/: mod.rs
src/remove/: mod.rs
src/repo/: mod.rs
src/repository/: mod.rs
src/resolver/: mod.rs
src/search/: mod.rs
src/store/: mod.rs
src/symlinks/: mod.rs
src/transaction/: mod.rs
src/trust/: mod.rs
src/update/: mod.rs
src/upgrade/: mod.rs
src/verify/: mod.rs
statebox/: Cargo.toml
statebox/src/: lib.rs
tests/: integration_test.rs
usr/lib64/: libapparmor.la  libapparmor.so.1  libapparmor.so.1.12.3
usr/lib64/pkgconfig/: libapparmor.pc
usr/sbin/: aa-status
usr/share/apparmor/: apparmor.vim
usr/share/locale/af/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/bs/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/de/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/en_GB/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/es/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/fa/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/fr/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/hi/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/id/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/it/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/ko/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/pl/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/pt/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/pt_BR/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/ru/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/sv/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/tr/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/ug/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/uk/LC_MESSAGES/: apparmor-utils.mo
usr/share/locale/zh_CN/LC_MESSAGES/: apparmor-utils.mo
usr/share/man/man1/: aa-enabled.1  aa-exec.1  aa-features-abi.1
usr/share/man/man5/: apparmor.d.5  apparmor.vim.5  logprof.conf.5
usr/share/man/man7/: apparmor.7  apparmor_xattrs.7
usr/share/man/man8/: aa-audit.8  aa-autodep.8  aa-cleanprof.8  aa-complain.8  aa-decode.8  aa-disable.8  aa-easyprof.8  aa-enforce.8  aa-genprof.8  aa-logprof.8  aa-mergeprof.8  aa-notify.8  aa-remove-unknown.8  aa-status.8  aa-teardown.8  aa-unconfined.8  apparmor_parser.8  apparmor_status.8
utils/: Cargo.toml
utils/src/: lib.rs  logging.rs
