[workspace]
resolver = "3"
members = ["commands", "flags", "settings", "statebox"]

[workspace.dependencies]
commands = { path = "./commands" }
flags = { path = "./flags" }
settings = { path = "./settings" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
statebox = { path = "./statebox" }

[package]
name = "pax"
version = "0.1.1"
edition = "2024"

[dependencies]
commands.workspace = true
flags.workspace = true
nix = { version = "0.30.1", features = ["user"] }
reqwest = { version = "0.12.23", features = ["blocking", "stream"] }
settings.workspace = true
serde.workspace = true
serde_json.workspace = true
statebox.workspace = true
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
zstd = "0.13.3"
rusqlite = { version = "0.32", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rpm = "0.15"
ar = "0.9"
tar = "0.4"
indicatif = "0.17"
tempfile = "3.13"
flate2 = "1.0"
walkdir = "2.5"
hex = "0.4"
rand = "0.8"
chrono = "0.4"
