[workspace]
resolver = "3"
members = ["commands", "flags", "metadata", "settings", "statebox"]

[workspace.dependencies]
commands = { path = "./commands" }
flags = { path = "./flags" }
metadata = { path = "./metadata" }
nix = { version = "0.30.1", features = ["user"] }
reqwest = "0.12.23"
settings = { path = "./settings" }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
statebox = { path = "./statebox" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[package]
name = "pax"
version = "0.1.1"
edition = "2024"

[dependencies]
commands.workspace = true
flags.workspace = true
metadata.workspace = true
nix.workspace = true
reqwest.workspace = true
settings.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
statebox.workspace = true
tokio.workspace = true

# [env]
# You can find some static variables in .cargo/config.toml
