[workspace]
resolver = "3"
members = ["commands", "flags", "metadata", "settings", "statebox", "utils"]

[workspace.dependencies]
commands = { path = "./commands" }
flags = { path = "./flags" }
metadata = { path = "./metadata" }
nix = { version = "0.30.1", features = ["user"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
settings = { path = "./settings" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
statebox = { path = "./statebox" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
urlencoding = "2.1"
utils = { path = "./utils" }
futures = "0.3"
tempfile = "3.8"
serde_yaml = "0.9"
tokio-test = "0.4"
sha2 = "0.10"
quick-xml = { version = "0.33", features = ["serialize"] }

[package]
name = "pax"
version = "0.1.1"
edition = "2024"

[dependencies]
commands.workspace = true
flags.workspace = true
metadata.workspace = true
reqwest.workspace = true
settings.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
statebox.workspace = true
tokio.workspace = true
urlencoding.workspace = true
utils.workspace = true
sha2.workspace = true
tempfile.workspace = true
serde_yaml.workspace = true

# [env]
# You can find some static variables in .cargo/config.toml
