[package]
name = "pax-builder"
version = "0.1.0"
edition = "2021"
description = "PAX Package Builder - Build .pax packages for PAX repositories"
authors = ["PAX Team"]
license = "MIT"
repository = "https://github.com/your-org/pax-rs"

[[bin]]
name = "pax-builder"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9.42"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
utils = { path = "../utils" }
